syntax = "proto2";

package cpr;

import "common_ui.proto";

option java_package = "com.digitald4.cpr.ui.proto";
option java_outer_classname = "CPRUIProtos";

message GetTrainningRequest {
	optional int32 trainning_id = 1;
}

message ListTrainningsRequest {
}

message TrainningUI {
	required int32 id = 1;
	required string name = 2;
	required string description = 3;
	optional int32 duration_mins = 4;
}

message GetSessionRequest {
	optional int32 session_id = 1;
}

message ListSessionsRequest {
	required common.DateRangeType date_range = 1;
	required int64 ref_date = 2;
	optional int32 trainning_id = 3;
}

message TrainningSessionUI {
	optional int32 id = 1;
	optional int32 trainning_id = 2;
	optional int64 start_time = 3;
	optional int32 duration_mins = 4;
	optional double cost = 5;
	optional common.GPSAddress location = 6;
	optional TrainningUI trainning = 7;
}

message GetReservationRequest {
	required string email = 1;
	required string confirmation_code = 2;
}

enum PaymentStatus {
	PS_UNSPECIFIED = 0;
	NOT_PAID = 1;
	PAYMENT_PENDING = 2;
	PARTIALLY_PAID = 3;
	PAID = 4;
	PAYMENT_VERIFIED = 5;
}

enum ClassResult {
	CR_UNSPECIFIED = 0;
	UNATTENDED = 1;
	PASSED = 2;
	FAILED = 3;
}

message ReservationUI {
	optional int32 id = 1;
	optional TrainningSessionUI session = 2;
	optional string contact_email = 3;
	optional string confirmation_code = 4;
	optional PaymentStatus payment_status = 5;
	optional string payment_confirmation_code = 6;

	message StudentUI {
		optional int32 id = 1;
		optional string name = 2;
		optional string email = 3;
		optional ClassResult result = 4;
	}
	repeated StudentUI student = 7;
}

message CreateReservationRequest {
	required ReservationUI reservation = 1;
}

message UpdateReservationRequest {
	required int32 reservation_id = 1;
	required string property = 2;
	required string value = 3;
}